--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,10 @@ a.button.small:hover,a.button.small:focus {
     display: none;
 	}
 .header-logo-2 img {
-    padding: 30px 30px 0;
+    padding: 30px 0;
+    width: 80%;
+    margin: 0 auto;
+    display: block;
 }
 .services-menu h4 {
     text-align: center;
@@ -632,7 +635,6 @@ a.button.small {
 		background:#333;
 		width:100%
 }
-
 	#toggle{
 		width:20px;
 		height:20px;
