--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h1,h2,h3,h4,h5,h6{
 	font-weight:400;
 	margin-top:0;
 	margin-bottom:2rem;
-	letter-spacing:.1em;
+	letter-spacing: 0.02em;
 }
 h1{
 	font-size:1.8em;
@@ -32,6 +32,11 @@ h4{
 	font-size:1.2em;
 	text-transform:uppercase;
 	margin-bottom:1rem;
+}
+li {
+    display: list-item!important;
+    margin-right: 20px;
+    margin-bottom: 10px;
 }
 .bottom{
 	position:absolute;
