--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h4{
 	text-transform:uppercase;
 	margin-bottom:1rem;
 }
-li {
+.contact li {
     display: list-item!important;
     margin-right: 20px;
     margin-bottom: 10px;
