--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body{
 	font-weight:400
 }
 
+p {letter-spacing: .02em;}
+
 h1,h2,h3,h4,h5,h6{
 	font-family: 'Cormorant Garamond', serif;
 	font-weight:400;
