--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,8 @@ a.button.small:hover,a.button.small:focus {
 	font-size: 2.2em;
 	margin: 0.2em;
 	line-height: 0;
+	position: fixed;
+z-index: 999;
 }
 
 @media (max-width:1024px){
