--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,13 @@ h1 {
 }
 
 h2 {
-    font-size: 1.6em;
+    font-size: 1.4em;
     line-height: 1.6;
     margin-bottom: 4rem;
 }
 
 h3 {
-    font-size: 1.4em;
+    font-size: 1.3em;
     line-height: 1.4
 }
 
@@ -96,7 +96,7 @@ li.main-nav-item {
     display: inline-block;
     text-align: center;
     margin: 0;
-    padding: 40px 2%
+    padding: 40px 2%;
 }
 
 .main-nav-item a {
@@ -123,13 +123,13 @@ li.main-nav-item {
 ul.slideout-nav {
     list-style: none;
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 
 li.slideout-nav-item {
     margin: 0;
     display: block;
-    text-align: center
+    text-align: center;
 }
 
 .slideout-nav-item a {
@@ -139,22 +139,22 @@ li.slideout-nav-item {
     letter-spacing: .1em;
     text-decoration: none;
     text-transform: uppercase;
-    padding: 30px
+    padding: 30px;
 }
 
 .slideout-nav-item a:hover {
     background: #d4874a;
-    display: block
+    display: block;
 }
 
 img {
     border-style: none;
     max-width: 100%;
-    height: auto
+    height: auto;
 }
 
 .opacity-medium {
-    opacity: .2
+    opacity: .2;
 }
 
 .button,
@@ -174,7 +174,7 @@ button {
     white-space: nowrap;
     border: 2px solid #fff;
     cursor: pointer;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 .button:focus,
@@ -182,7 +182,7 @@ button {
 button:focus,
 button:hover {
     background-color: #ffffff;
-    color: #006c94
+    color: #006c94;
 }
 
 a.button.small {
@@ -266,14 +266,16 @@ a.button.small:focus {
 
 .team {
     margin: 0;
-    position: relative;
 }
-
+.team .col {
+    background: #286C91;
+    background: linear-gradient(60deg, rgba(40, 108, 145, 1) 0%, rgba(32, 85, 115, .6) 100%);
+}
 .team-photo {
     background-size: cover !important;
     background-position: 50% 50% !important;
     min-height: 400px;
-    transition: 1s
+    transition: 1s;
 }
 
 .team1 {
@@ -309,18 +311,24 @@ a.button.small:focus {
     background: url(../images/team-09.jpg) no-repeat
 }
 
-.team h2.center {
+.team h2 {
+    color: #fff;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 700;
+    font-size: 1.3em;
+    line-height: 1.4em;
+    margin: 0;
+}
+.team h3 {
     color: #fff;
     font-family: 'Lato', sans-serif;
     font-weight: 500;
-    background: #286c91c2;
-    font-size: 1.3em;
-    margin-bottom: 2rem;
+    font-size: .9em;
+    line-height: 1.4em;
 }
-
-.team .col {
-    transition: 1s;
-    position: relative
+.team-content {
+    margin: 1.2em;
+    min-height: 110px;
 }
 
 .services {
@@ -476,21 +484,21 @@ a.button.small:focus {
     margin: 20px;
 }
 
-.waitlist-form {
+.waitlist {
     background: #ffffff;
     padding: 80px 20px;
 }
 
-.waitlist-form-form h4 {
+.waitlist h4 {
     color: #286c91;
     font-weight: 600;
 }
 
-.waitlist-form .col {
+.waitlist .col {
     margin: 20px;
 }
 
-.waitlist-form .container {
+.waitlist .container {
     width: 600px;
 }
 
@@ -726,8 +734,8 @@ a.button.small:focus {
         text-align: center
     }
 
-    .team h2.center {
-        font-size: 22px
+    .team h2 {
+        font-size: 1.1em;
     }
 
     .headline {
@@ -885,8 +893,7 @@ a.button.small:focus {
             display: none
         }
 
-        .intake-form .container {
+        .waitlist .container {
             width: 100%;
         }
     }
-}
