--- a/css/style.css
+++ b/css/style.css
@@ -248,18 +248,26 @@ a.button.small:focus {
     color: #006c94;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 1.6em;
+    font-size: 1.2em;
     letter-spacing: .02em;
     margin-top: 40px;
     text-align: center;
-    line-height: 1.8em;
+    line-height: 1.6em;
     margin-bottom: 0;
 }
 
 .wellness {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+}
+
+.wellness h1 {
     color: #FFFFFF;
-    margin: 60px 20px;
+    font-size: 1.4em;
     text-align: center;
+    margin:0;
 }
 
 .team {
@@ -305,17 +313,18 @@ a.button.small:focus {
 .team h2 {
     color: #fff;
     font-family: 'Cormorant Garamond', serif;
-    font-weight: 700;
-    font-size: 1.3em;
+    font-weight: 600;
+    font-size: 1.8em;
     line-height: 1.4em;
     margin: 0;
 }
 .team h3 {
     color: #fff;
     font-family: 'Lato', sans-serif;
-    font-weight: 500;
-    font-size: .9em;
+    font-weight: 400;
+    font-size: .8em;
     line-height: 1.4em;
+    letter-spacing: .02em;
 }
 .team-content {
     margin: 1.4em;
@@ -725,15 +734,14 @@ a.button.small:focus {
     background: #000000;
     cursor: pointer;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     margin:0;
 }
 
 .scrollToTop a {
     color: #fff;
     text-decoration: none;
-    font-size: .9em;
-    font-stretch: 125%;
+    font-size: .8em;
 }
 
 @media (max-width:1024px) {
@@ -840,6 +848,7 @@ a.button.small:focus {
     .ethics {
         padding: 40px 0
     }
+}
 
     @media screen and (max-width:1024px) {
         .primary-nav {
@@ -904,4 +913,3 @@ a.button.small:focus {
             width: 100%;
         }
     }
-}
