--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,8 @@ a.button.small:focus {
 .wellness h1 {
     color: #FFFFFF;
     font-size: 1.4em;
+    font-weight: 600;
+    letter-spacing: 0.05em;
     text-align: center;
     margin:0;
 }
