--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ li.main-nav-item {
 ul.mobile-menu-list {
     list-style: none;
     padding: 0;
-    margin-top: 30px;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,7 +130,7 @@ ul.mobile-menu-list a {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 400;
-    padding: 15px;
+    padding: 20px;
 }
 ul.mobile-menu-list li:active,
 ul.mobile-menu-list li:hover,
@@ -723,6 +723,7 @@ a.button.small:focus {
     text-align: center;
     padding: 20px;
     margin:0;
+    background-color: none;
 }
 
 .scrollToTop a {
