--- a/css/style.css
+++ b/css/style.css
@@ -846,7 +846,7 @@ a.button.small:focus {
 
     @media screen and (max-width:768px) {
         .hero {
-            min-height: 360px;
+            height: 100vh;
         }
         .hero h1 {
             font-size: 3em;
