--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,24 @@
     --base-color-teal: #006c94;
     --base-color-dark-teal: #286c91;
     --base-color-white: #ffffff;
-    --base-color-text: #000000;
+    --base-color-text: #333333;
     --base-color-cream: #fbf8ed;
     
 /* Font Families */
-    --font-primary:'Cormorant Garamond', serif;
+    --font-primary:'Libre Caslon Text', serif;
     --font-secondary:'Lato', sans-serif;
     
 /*  Font Sizes */
-
+    --xlarge: 33px;
+    --large: 23px;
+    --medium: 21px;
+    --small: 19px;
+    --xsmall: 17px;
     
 /*  Font Weights */
     --font-weight-normal: 400;
-    --font-weight-bold: 600;
+    --font-weight-bold: 500;
+    --font-weight-xtra: 600;
 }
 
 html {
@@ -24,54 +29,52 @@ html {
 }
 
 body {
-    color: #000;
-    font-family: 'Lato', sans-serif;
-    font-size: 18px;
-    background: #286c91;
-    line-height: 1.6;
-    font-weight: 400;
+    color: var(--base-color-text);
+    background: var(--base-color-dark-teal);
+    font-family: var(--font-secondary);
+    letter-spacing: -.02px;
 }
 
 p {
-    letter-spacing: .02em;
+    font-family: var(--font-primary);
+    font-size: var(--small);
+    line-height: 1.8;
+    font-weight: var(--font-weight-normal);
 }
 
 h1,
 h2,
 h3,
 h4 {
-    font-family: 'Cormorant Garamond', serif;
-    font-weight: 400;
+    font-family: var(--font-primary);
+    font-weight: var(--font-weight-bold);
     margin-top: 0;
-    margin-bottom: 2rem;
-    letter-spacing: 0.01em;
-}
-
-h1 {
-    font-size: 1.8em;
-    line-height: 1.2;
-    margin-bottom: 4rem;
-}
-
-h2 {
-    font-size: 1.8em;
-    color: var(--base-color-teal);
-    line-height: 1.8;
-    margin-bottom: 2rem;
-    margin-top: 0;
-    text-align: center;
+    margin-bottom: 32px;
+    letter-spacing: 0.05px;
     text-transform: uppercase;
 }
 
+h1 {
+    font-size: var(--xlarge);
+    line-height: 1.2;
+    margin-bottom: 64px;
+}
+
+h2 {
+    font-size: var(--large);
+    color: var(--base-color-teal);
+    line-height: 1.8;
+    text-align: center;
+}
+
 h3 {
-    font-size: 1.3em;
+    font-size: var(--medium);
     line-height: 1.4;
 }
 
 h4 {
-    font-size: 1.2em;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
+    font-size: var(--small);
+    margin-bottom: 16px;
 }
 
 .container {
@@ -91,7 +94,7 @@ img.center {
     margin: auto;
 }
 
-.header-logo img {
+.header-logo {
     display: block;
     margin: 40px auto 20px;
 }
@@ -108,15 +111,15 @@ li.main-nav-item {
     display: inline-block;
     text-align: center;
     margin: 0;
-    padding: 40px 2%;   
+    padding: 40px 1.5%;   
 }
 .main-nav-item a {
-    color: #fff;
-    font-size: 1em;
-    letter-spacing: .1em;
+    color: var(--base-color-white);
+    font-size: var(--small);
+    letter-spacing: 2px;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: var(--font-weight-normal);
     padding: 6px 0;
 }
 
@@ -143,12 +146,12 @@ ul.mobile-menu-list li {
 }
 ul.mobile-menu-list a {
     display: block;
-    color: #fff;
-    font-size: .9em;
-    letter-spacing: .1em;
+    color: var(--base-color-white);
+    font-size: var(--xsmall);
+    letter-spacing: 1px;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: var(--font-weight-normal);
     padding: 20px;
 }
 ul.mobile-menu-list li:active,
@@ -170,20 +173,20 @@ img {
 
 .button,
 button {
-    color: #fff;
-    font-family: 'Lato', sans-serif;
+    color: var(--base-color-white);
+    font-family: var(--font-secondary);
     font-size: 18px;
     font-weight: 700;
     line-height: 28px;
     border-radius: 10px;
     display: inline-block;
     padding: 8px 40px;
-    letter-spacing: .08rem;
+    letter-spacing: 1px;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
-    border: 2px solid #fff;
+    border: 2px solid var(--base-color-white);
     cursor: pointer;
     box-sizing: border-box;
 }
@@ -192,27 +195,27 @@ button {
 .button:hover,
 button:focus,
 button:hover {
-    background-color: #ffffff;
-    color: #006c94;
+    background-color: var(--base-color-white);
+    color: var(--base-color-teal);
 }
 
 a.button.small {
     line-height: 12px;
     border-radius: 5px;
-    font-size: .7em;
-    letter-spacing: .2em;
-    border: 1px solid #006c94;
-    color: #006c94;
+    font-size: 11px;
+    letter-spacing: 1px;
+    border: 1px solid var(--base-color-teal);
+    color: var(--base-color-teal);
 }
 
 a.button.small:hover,
 a.button.small:focus {
-    background: #006c94;
-    color: #ffffff;
+    background: var(--base-color-teal);
+    color: var(--base-color-white);
 }
 
 .hero {
-    color: #fff;
+    color: var(--base-color-white);
     text-align: center;
     height: 640px;
     position: relative;
@@ -222,7 +225,7 @@ a.button.small:focus {
     background: url(../images/hero.jpg) no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    opacity: .3;
+    opacity: .15;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -241,9 +244,11 @@ a.button.small:focus {
 }
 
 .hero h1 {
-    font-size: 3.4em;
-    letter-spacing: -.02em;
-    margin-bottom: 2rem;
+    font-size: 60px;
+    font-weight: var(--font-weight-normal);
+    letter-spacing: -1px;
+    margin-bottom: 72px;
+    text-transform: none;
 }
 
 .hero a.button,
@@ -252,20 +257,18 @@ a.button.small:focus {
 }
 
 .mission {
-    background: rgb(251, 248, 237);
-    background: linear-gradient(180deg, rgba(251, 248, 237, 1) 0%, rgba(255, 255, 255, 1) 100%);
+    background-color: var(--base-color-cream);
     padding: 100px 20px;
 }
-
-.mission h2 {
-    color: #006c94;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 1.2em;
-    letter-spacing: .02em;
+.mission h3 {
+    color: var(--base-color-teal);
+    font-family: var(--font-secondary);
+    font-weight: var(--font-weight-bold);
+    font-size: var(--large);
+    text-transform: initial;
     margin-top: 40px;
     text-align: center;
-    line-height: 1.6em;
+    line-height: 33px;
     margin-bottom: 0;
 }
 
@@ -275,21 +278,17 @@ a.button.small:focus {
     justify-content: center;
     height: 100px;
 }
-
-.wellness h1 {
-    color: #FFFFFF;
-    font-size: 1.4em;
-    font-weight: 600;
-    letter-spacing: 0.05em;
-    text-align: center;
+.wellness h2 {
+    color: var(--base-color-white);
+    font-size: var(--large);
+    font-weight: var(--font-weight-bold);
     margin:0;
 }
-
 .team {
     margin: 0;
 }
 .team .col {
-    background: #286C91;
+    background: var(--base-color-dark-teal);
 }
 .team-photo {
     background-size: cover !important;
@@ -325,189 +324,55 @@ a.button.small:focus {
     background: url(../images/team-09.jpg) no-repeat
 }
 
-.team h2 {
-    color: #fff;
-    font-family: 'Cormorant Garamond', serif;
-    font-weight: 600;
-    font-size: 1.36em;
-    line-height: 1.4em;
+.team h3 {
+    color: var(--base-color-white);
+    font-family: var(--font-primary);
+    font-weight: var(--font-weight-bold);
+    font-size: var(--medium);
+    text-transform: none;
+    line-height: 21px;
     margin: 0;
+    padding-bottom: 10px;
     text-align: left;
 }
-.team h3 {
-    color: #fff;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: .9em;
-    line-height: 1.4em;
-    letter-spacing: .02em;
+.team h4 {
+    color: var(--base-color-white);
+    font-family: var(--font-secondary);
+    font-weight: var(--font-weight-normal); 
+    font-size: var(--xsmall);
+    line-height: 23px;
+    letter-spacing: .5px;
+    text-transform: none;
+    padding-bottom: 10px;
 }
 .team-content {
-    margin: 1.4em;
-}
-
-.services {
-    color: #fff;
-    padding: 80px 40px;
-    position: relative;
-    background-color: #000;
-    text-align: center;
-    background: url(../images/abstract-background@2x.jpg) no-repeat;
-    background-size: cover;
-    background-position: 0 0
-}
-
-.services h1 {
-    font-weight: 600;
-    font-size: 28px;
-    color: #fff;
-    text-transform: uppercase;
-    text-align: center;
-    padding: 40px;
-    margin-bottom: 0;
-    letter-spacing: 1px
-}
-
-.services .flex-grid-thirds .col {
-    width: 32%;
-    margin: 0 40px
-}
-
-.services-2 {
-    color: #fff;
-    text-align: center
-}
-
-.services-2 .col {
-    transition: 1s;
-    position: relative
-}
-
-.services1,
-.services2,
-.services3,
-.services4,
-.services5,
-.services6 {
-    background-size: cover !important;
-    background-position: 50% 50% !important;
-    min-height: 500px;
-    transition: 1s
-}
-
-.services1:hover,
-.services2:hover,
-.services3:hover,
-.services4:hover,
-.services5:hover,
-.services6:hover {
-    opacity: .5;
-    cursor: pointer
-}
-
-.services-2 h1 {
-    font-weight: 700;
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 36px;
-    color: #fff;
-    text-transform: uppercase;
-    text-align: center;
-    padding: 40px;
-    margin-bottom: 0;
-    letter-spacing: 1px
-}
-
-.services-2 h2.center {
-    color: #fff;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    background: #286c91c2;
-    font-size: 1.3em;
-}
-
-.services-2 .flex-grid-thirds .col {
-    width: 32%;
-    margin: 0 40px;
-}
-
-.services1 {
-    background: url(../images/bodyworks.jpg) no-repeat
-}
-
-.services2 {
-    background: url(../images/skincare.jpg) no-repeat
-}
-
-.services3 {
-    background: url(../images/reflexology.jpg) no-repeat
-}
-
-.services4 {
-    background: url(../images/fitness.jpg) no-repeat
-}
-
-.services5 {
-    background: url(../images/wellness.jpg) no-repeat
-}
-
-.services6 {
-    background: url(../images/acupunture.jpg) no-repeat
-}
-
-.services h2.center {
-    color: #fff;
-    font-weight: 700;
-    margin-top: 75%;
-    background: #24002ba8
-}
-
-.service-content {
-    vertical-align: middle;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    padding: 40px;
-}
-
-.services-section {
-    background: #ffffff;
-}
-
-.services-section-content .flex-grid-half .col {
-    padding: 60px;
-}
-
-.services-section-content h1 {
-    color: #ff2925;
-    font-size: 26px;
+    margin: 21px;
 }
 
 .services-menu {
-    background: rgb(251, 248, 237);
+    background-color: var(--base-color-cream);
     padding: 80px 20px;
 }
-
 .services-menu h4 {
-    color: #286c91;
-    font-weight: 600;
+    color: var(--base-color-dark-teal);
+    font-weight: var(--font-weight-bold);
 }
-
+.services-menu p {
+    line-height: 1.4;
+    font-size: var(--xsmall);
+    font-family: var(--font-secondary);
+}
 .services-menu .col {
-    margin: 20px;
+    margin: 15px;
 }
 
 .waitlist {
-    background: #ffffff;
+    background: var(--base-color-white);
     padding: 80px 20px;
 }
-
 .waitlist .col {
     margin: 20px;
 }
-
 .waitlist .container {
     width: 600px;
 }
@@ -519,125 +384,99 @@ a.button.small:focus {
     background-size: cover;
     background-position: 0 0;
 }
-
-.book-now h1 {
-    color: #fff;
-    font-size: 2.1em;
-    letter-spacing: 0;
-    margin-bottom: 2rem;
-}
-
-.about h4 {
-    color: #286c91;
-    font-weight: 600;
-}
-
-.about .flex-grid .col {
-    padding: 0 40px;
+.book-now h2 {
+    color: var(--base-color-white);
 }
 
 .options {
-    color:  #286c91;
-    background: #fff;
+    color: var(--base-color-dark-teal);
+    background: var(--base-color-white);
     position: relative;
     padding: 80px 20px;
 }
 .options h1 {
-    font-weight: 600;
+    text-transform: initial;
 }
-.options h2 {
-    font-size: 1.3em;
+.options p {
+    margin: 0;
 }
 .options li {
     display: list-item !important;
     margin-right: 20px;
     margin-bottom: 10px;
-}
-
-.contact {
-    color:  #fff;
-    background: #286c91;
-    position: relative;
-    padding: 80px 20px;
-}
-.contact h4 {
-    font-weight: 600;
-    font-size: 1.3em;
+    font-family: var(--font-primary);
+    font-size: var(--small);
+    font-weight: var(--font-weight-normal);
 }
 
 .col.no-padding {
     padding-top: 0 !important
 }
-
 .col.google-map {
     padding: 0 !important;
-    height: 540px
-}
-
-.media {
-    background: #000;
-    color: #fff;
-    min-height: 360px;
-    padding: 80px 40px;
-    position: relative
+    height: 540px;
 }
 
 .about {
-    background: #fff;
+    background: var(--base-color-white);
     min-height: 480px;
     padding: 80px 20px;
     position: relative
 }
-
 .about-image {
     background: url(../images/about.jpg) no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    background-color: #fff;
+    background-color: var(--base-color-white);
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0
+    left: 0;
 }
-
-.about h2 {
-    font-family: 'Lato', sans-serif;
-    margin-top: 20px;
-    letter-spacing: .05em;
-    font-size: 1.2em;
-    text-transform: uppercase;
-}
-
 .about p {
-    font-size: 1.3em;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: var(--font-primary);
 }
-
-.ethics p {
-    font-size: 1.3em;
-    font-family: 'Cormorant Garamond', serif;
-}
-
-.ethics .flex-grid .col {
+.about .flex-grid .col {
     padding: 0 40px;
+}
+.round {
+    border-radius: 50%;
+    padding-bottom: 20px;
 }
 
 .ethics {
     padding: 80px 40px;
     position: relative;
-    background-color: #fff;
+    background-color: var(--base-color-white);
+}
+.ethics p {
+    font-family: var(--font-primary);
+}
+.ethics .flex-grid .col {
+    padding: 0 40px;
 }
 
-.round {
-    border-radius: 50%;
+.contact {
+    color: var(--base-color-white);
+    background-color: var(--base-color-dark-teal);
+    position: relative;
+    padding: 80px 20px;
+}
+.contact p {
+    font-family: var(--font-secondary);
+    font-size: var(--xsmall);
 }
 
 .footer {
-    background-color: #EBEBEB;
-    color: #000000;
+    background-color: var(--base-color-cream);
+    color: var(--base-color-text);
     padding: 10px;
-    text-align: center
+    text-align: center;
+}
+.footer p{
+    font-family: var(--font-secondary);
+    font-size: var(--xsmall);
 }
 
 .vh-align-center {
@@ -648,28 +487,28 @@ a.button.small:focus {
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
-    align-items: center
+    align-items: center;
 }
 
 .vh-align-item {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -ms-flex: 1;
-    flex: 1
+    flex: 1;
 }
 
 .vh-align-top {
-    align-self: flex-start
+    align-self: flex-start;
 }
 
 .vh-align-bottom {
-    align-self: flex-end
+    align-self: flex-end;
 }
 
 .align-bottom {
     position: absolute;
     bottom: 0;
-    width: 100%
+    width: 100%;
 }
 
 .flex-container {
@@ -682,7 +521,7 @@ a.button.small:focus {
     flex-direction: row;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .flex-grid {
@@ -698,7 +537,7 @@ a.button.small:focus {
     display: -ms-flexbox;
     display: flex;
     justify-content: space-between;
-    position: relative
+    position: relative;
 }
 
 .flex-grid-half .col {
@@ -727,64 +566,52 @@ a.button.small:focus {
 }
 
 .scrollToTop a {
-    color: #fff;
+    color: var(--base-color-white);
     text-decoration: none;
-    font-size: .6em;
-    font-weight: 600;
+    font-size: 12px;
+    font-weight: var(--font-weight-bold);
 }
 
 @media (max-width:1024px) {
     .col p {
-        text-align: center
+        text-align: center;
     }
 
     .team h2 {
-        font-size: 1.1em;
-    }
-
-    .headline {
-        font-size: 48px;
-    }
-
-    .mission h1 {
-        font-size: 32px
-    }
-
-    .services h1 {
-        padding: 0
+        font-size: var(--xsmall);
     }
 
     .flex-grid {
-        display: block
+        display: block;
     }
 
     .flex-grid-half .col,
     .flex-grid-thirds .col {
         width: 100%;
         text-align: center;
-        padding: 40px 0
+        padding: 40px 0;
     }
 
     .flex-grid-thirds {
         display: block;
         justify-content: space-between;
-        margin: 0
+        margin: 0;
     }
 
     .flex-grid-half {
-        display: block
+        display: block;
     }
 
     .mobile-img {
-        display: block
+        display: block;
     }
 
     .about-image {
-        background: 0 0
+        background: 0 0;
     }
 
     .about {
-        padding: 40px 0
+        padding: 80px 0;
     }
 
     .service-content {
@@ -798,10 +625,6 @@ a.button.small:focus {
         padding: 40px;
     }
 
-    .services-menu h4 {
-        text-align: center;
-    }
-
     a.button.small {
         display: block;
         margin-bottom: 80px;
@@ -813,19 +636,17 @@ a.button.small:focus {
 
     .ethics .col p {
         text-align: left;
-        line-height: 1.4em;
     }
-
     .ethics {
-        padding: 40px 0
+        padding: 40px 0;
     }
 }
 
     @media screen and (max-width:1024px) {
-        .header-logo img {
+        .header-logo {
             padding-top: 30px;
             width: 300px;
-            margin:  auto;
+            margin: auto;
             display: block;
         }
         .primary-nav {
@@ -841,7 +662,6 @@ a.button.small:focus {
             font-size: 14px;
             line-height: 20px;
             padding: 8px 30px;
-            letter-spacing: .08rem;
         }
     }
 
@@ -850,21 +670,52 @@ a.button.small:focus {
             height: 480px;
         }
         .hero h1 {
-            font-size: 2.8em;
+            font-size: 40px;
         }
-        .team h2 {
-            font-weight: 600;
-            font-size: 1.3em;
+        .mission h3 {
+            font-size: var(--medium);
         }
         .team h3 {
-            font-weight: 400;
-            font-size: 1em;
+            font-weight: var(--font-weight-bold);
+            font-size: var(--medium);
+            text-align: center;
+        }
+        .team h4 {
+            font-weight: var(--font-weight-normal);
+            font-size: var(--xsmall);
+            text-align: center;
+        }
+        .options .col{
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
+        .options li {
+            list-style-type: none;
+        }
+        .options p {
+            line-height: 31px;
         }
         .waitlist .container {
             width: 100%;
         }
+        .services-menu h4 {
+            text-align: center;
+        }
+        .services-menu p {
+            padding-bottom: 20px;
+        }
+        .about p {
+            text-align: left;
+        }
         .mobile-menu {
             display: block;
+        }
+        .contact .col {
+            padding-top: 40px;
+        }
+        .contact h3 {
+            font-size: var(--xsmall);
+            margin-bottom: 0;
         }
         .navbar {
             display: none;
@@ -872,7 +723,6 @@ a.button.small:focus {
         #menu-toggle:checked + .toggle-button + .navbar {
             display: block;
         }
-        
         .toggle-button {
             display: block;
             cursor: pointer;
@@ -887,7 +737,7 @@ a.button.small:focus {
         .toggle-button div {
             width: 25px;
             height: 3px;
-            background-color: #fff;
+            background-color: var(--base-color-white);
             margin: 5px 0;
             transition: all 0.3s ease-in-out;
         }
@@ -896,7 +746,6 @@ a.button.small:focus {
             opacity: 0;
             pointer-events: none;
         }
-
         #menu-toggle:checked ~ .toggle-button .one {
             transform: translateY(8px) rotate(45deg);
         }
@@ -905,8 +754,5 @@ a.button.small:focus {
         }
         #menu-toggle:checked ~ .toggle-button .three {
             transform: translateY(-8px) rotate(-45deg);
-        }
-        .contact .col {
-            padding-top: 40px;
         }
     }
