--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,19 @@
     --font-primary:'Libre Caslon Text', serif;
     --font-secondary:'Lato', sans-serif;
     
-/*  Font Sizes */
+/* Font Sizes */
     --xlarge: 33px;
     --large: 23px;
     --medium: 21px;
     --small: 19px;
     --xsmall: 17px;
+    
+/* Font Line Heights */
+    --lh-xlarge: 1.2;
+    --lh-large: 1.4;
+    --lh-medium: 1.5;
+    --lh-small: 1.7;
+    --lh-xsmall: 1.5;
     
 /*  Font Weights */
     --font-weight-normal: 400;
@@ -38,8 +45,9 @@ body {
 p {
     font-family: var(--font-primary);
     font-size: var(--small);
-    line-height: 1.8;
+    line-height: var(--lh-small);
     font-weight: var(--font-weight-normal);
+    margin-bottom: var(--small);
 }
 
 h1,
@@ -56,20 +64,19 @@ h4 {
 
 h1 {
     font-size: var(--xlarge);
-    line-height: 1.2;
     margin-bottom: 64px;
 }
 
 h2 {
     font-size: var(--large);
+    line-height: var(--lh-large);
     color: var(--base-color-teal);
-    line-height: 1.8;
     text-align: center;
+    padding-top: 12px;
 }
 
 h3 {
     font-size: var(--medium);
-    line-height: 1.4;
 }
 
 h4 {
@@ -177,7 +184,6 @@ button {
     font-family: var(--font-secondary);
     font-size: 18px;
     font-weight: 700;
-    line-height: 28px;
     border-radius: 10px;
     display: inline-block;
     padding: 8px 40px;
@@ -197,21 +203,6 @@ button:focus,
 button:hover {
     background-color: var(--base-color-white);
     color: var(--base-color-teal);
-}
-
-a.button.small {
-    line-height: 12px;
-    border-radius: 5px;
-    font-size: 11px;
-    letter-spacing: 1px;
-    border: 1px solid var(--base-color-teal);
-    color: var(--base-color-teal);
-}
-
-a.button.small:hover,
-a.button.small:focus {
-    background: var(--base-color-teal);
-    color: var(--base-color-white);
 }
 
 .hero {
@@ -268,7 +259,7 @@ a.button.small:focus {
     text-transform: initial;
     margin-top: 40px;
     text-align: center;
-    line-height: 33px;
+    line-height: var(--lh-large);
     margin-bottom: 0;
 }
 
@@ -293,8 +284,10 @@ a.button.small:focus {
 .team-photo {
     background-size: cover !important;
     background-position: 50% 50% !important;
-    min-height: 400px;
+    min-height: 320px;
     transition: 1s;
+    margin: 20px;
+    border-radius: 10px;
 }
 .team1 {
     background: url(../images/team-01.jpg) no-repeat
@@ -330,7 +323,7 @@ a.button.small:focus {
     font-weight: var(--font-weight-bold);
     font-size: var(--medium);
     text-transform: none;
-    line-height: 21px;
+    line-height: var(--lh-medium);
     margin: 0;
     padding-bottom: 10px;
     text-align: left;
@@ -340,7 +333,7 @@ a.button.small:focus {
     font-family: var(--font-secondary);
     font-weight: var(--font-weight-normal); 
     font-size: var(--xsmall);
-    line-height: 23px;
+    line-height: var(--lh-xsmall);
     letter-spacing: .5px;
     text-transform: none;
     padding-bottom: 10px;
@@ -358,9 +351,12 @@ a.button.small:focus {
     font-weight: var(--font-weight-bold);
 }
 .services-menu p {
-    line-height: 1.4;
+    line-height: var(--lh-xsmall);
     font-size: var(--xsmall);
     font-family: var(--font-secondary);
+}
+.services-menu img {
+    border-radius: 10px;
 }
 .services-menu .col {
     margin: 15px;
@@ -396,9 +392,6 @@ a.button.small:focus {
 }
 .options h1 {
     text-transform: initial;
-}
-.options p {
-    margin: 0;
 }
 .options li {
     display: list-item !important;
@@ -467,6 +460,10 @@ a.button.small:focus {
     font-family: var(--font-secondary);
     font-size: var(--xsmall);
 }
+.contact h3 {
+    line-height: var(--lh-small);
+    margin-bottom: 12px;
+}
 
 .footer {
     background-color: var(--base-color-cream);
@@ -477,38 +474,6 @@ a.button.small:focus {
 .footer p{
     font-family: var(--font-secondary);
     font-size: var(--xsmall);
-}
-
-.vh-align-center {
-    display: -webkit-box;
-    display: -webkit--grid;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-.vh-align-item {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-}
-
-.vh-align-top {
-    align-self: flex-start;
-}
-
-.vh-align-bottom {
-    align-self: flex-end;
-}
-
-.align-bottom {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
 
 .flex-container {
@@ -660,7 +625,7 @@ a.button.small:focus {
         .button,
         button {
             font-size: 14px;
-            line-height: 20px;
+            
             padding: 8px 30px;
         }
     }
@@ -692,9 +657,6 @@ a.button.small:focus {
         .options li {
             list-style-type: none;
         }
-        .options p {
-            line-height: 31px;
-        }
         .waitlist .container {
             width: 100%;
         }
@@ -715,7 +677,6 @@ a.button.small:focus {
         }
         .contact h3 {
             font-size: var(--xsmall);
-            margin-bottom: 0;
         }
         .navbar {
             display: none;
@@ -726,7 +687,7 @@ a.button.small:focus {
         .toggle-button {
             display: block;
             cursor: pointer;
-            padding: 10px 15px;
+            margin: 15px;
             position: absolute;
             top: 0;
             right: 0;
