--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,9 @@ button:hover {
         .about p {
             text-align: left;
         }
+        .about .flex-grid .col, .ethics .flex-grid .col {
+            padding: 0 20px;
+        }
         .mobile-menu {
             display: block;
         }
