--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,11 @@ h2 {
 }
 
 h3 {
-    font-size: var(--medium);
+    font-size: var(--small);
 }
 
 h4 {
-    font-size: var(--small);
+    font-size: var(--xsmall);
     margin-bottom: 16px;
 }
 
@@ -234,7 +234,7 @@ button:hover {
 }
 
 .hero h1 {
-    font-size: 60px;
+    font-size: 54px;
     font-weight: var(--font-weight-normal);
     letter-spacing: -1px;
     margin-bottom: 60px;
